# GeometryGenerator

./: CMakeLists.txt  README.md
dependencies/imgui-master/: imgui_impl_glfw.cpp
include/: Shader.h  ShaderProgram.h  VertexArray.h  VertexBuffer.h  Window.h  geometryGeneratorConstants.h  glfwTest.h  random.h  utils.h
include/glad/: glad.h
shaders/: blackAndWhite.frag  colorPicker.frag  lavaLamp.frag  rainbow.frag  rotational.vert
src/: Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  glad.c  main.cpp  utils.cpp
